--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ sbt_args: "-J-Xmx2G"
 script:
   - sbt clean +test:compile
   - sbt +test
+  - sbt clean coverage test coverageReport && sbt coverageAggregate
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
