--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,15 @@ version: "3.8"
 
 services:
   vault-server:
-    network_mode: "host"
     image: vault:latest
     environment:
       VAULT_ADDR: "http://0.0.0.0:8200"
       VAULT_DEV_ROOT_TOKEN_ID: "vault-plaintext-root-token"
+    ports:
+      - "8200:8200"
     cap_add:
       - IPC_LOCK
   mongo:
-    network_mode: "host"
     image: mongo
+    ports:
+      - "37017:27017"
