--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,3 +16,7 @@ reqwest = { version = "0.11", features = ["json"] }
 chrono = "0"
 dialoguer = "0.11"
 serde_yaml = "0.9"
+minijinja = "1"
+console = "0.15"
+json_to_table = "0.7"
+tabled = "0.15"
