fix(build): use bookworm

--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /usr/src/tresor
 COPY . .
 RUN cargo install --path .
 
-FROM debian:bullseye-slim
-RUN apt-get update && apt-get install -y openssl ca-certificates && rm -rf /var/lib/apt/lists/*
+FROM debian:bookworm-slim
+RUN apt-get update -y && apt-get install -y openssl ca-certificates && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /usr/local/cargo/bin/tresor-cli /usr/local/bin/tresor
 CMD ["tresor"]
