fix(auth): proper callback binding

--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -6,4 +6,11 @@ RUN cargo install --path .
 FROM debian:bookworm-slim
 RUN apt-get update -y && apt-get install -y openssl ca-certificates && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /usr/local/cargo/bin/tresor-cli /usr/local/bin/tresor
+
+RUN useradd -ms /bin/bash tresor
+USER tresor:tresor
+WORKDIR /home/tresor
+
+# port for the login callback
+EXPOSE 8250
 CMD ["tresor"]
